fix(service-desk): レビュー指摘反映 (法人カレンダー限定SLA・配点整合・N+1解消・ポータル権限seed・V1 DROP削除)