@@ -8,12 +8,14 @@ import com.ses.dto.servicedesk.CustomerHealthScoreDto;
 import com.ses.entity.Customer;
 import com.ses.entity.CustomerCsat;
 import com.ses.entity.CustomerHealthSnapshot;
+import com.ses.entity.CustomerQbr;
 import com.ses.entity.Invoice;
 import com.ses.entity.ServiceRequest;
 import com.ses.entity.ServiceSlaClock;
 import com.ses.mapper.CustomerCsatMapper;
 import com.ses.mapper.CustomerHealthSnapshotMapper;
 import com.ses.mapper.CustomerMapper;
+import com.ses.mapper.CustomerQbrMapper;
 import com.ses.mapper.InvoiceMapper;
 import com.ses.mapper.ServiceRequestMapper;
 import com.ses.mapper.ServiceSlaClockMapper;
@@ -34,15 +36,13 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * 顧客ヘルススコア算定サービス (100点減点モデル: WIP-3, WIP-4)
+ * 顧客ヘルススコア算定サービス (100点減点モデル & N+1解消: WIP-3, WIP-4)
  */
 @Slf4j
 @Service
@@ -53,6 +53,7 @@ public class CustomerHealthServiceImpl implements CustomerHealthService {
     private final ServiceRequestMapper serviceRequestMapper;
     private final ServiceSlaClockMapper slaClockMapper;
     private final CustomerCsatMapper csatMapper;
+    private final CustomerQbrMapper qbrMapper;
     private final ObjectProvider<InvoiceMapper> invoiceMapperProvider;
     private final CustomerHealthSnapshotMapper snapshotMapper;
     private final DataScopeService dataScopeService;
@@ -62,273 +63,300 @@ public class CustomerHealthServiceImpl implements CustomerHealthService {
     @Override
     @Transactional(readOnly = true)
     public CustomerHealthScoreDto calculateCustomerHealth(Long customerId) {
-        Customer customer = customerMapper.selectById(customerId);
-        if (customer == null) {
-            throw BusinessException.of(404, "指定された顧客が見つかりません");
-        }
         if (dataScopeService.isScoped()) {
             dataScopeService.assertAllowedCustomer(customerId);
         }
 
-        return computeScore(customer);
+        Customer customer = customerMapper.selectById(customerId);
+        if (customer == null) {
+            throw BusinessException.of(404, "指定された顧客が見つかりません");
+        }
+
+        Map<Long, CustomerHealthScoreDto> scoreMap = getHealthMapForCustomers(Set.of(customerId));
+        return scoreMap.get(customerId);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<CustomerHealthScoreDto> listCustomerHealthSummaries(String healthStatus, String keyword) {
+        LambdaQueryWrapper<Customer> wrapper = new LambdaQueryWrapper<Customer>().orderByAsc(Customer::getId);
+        if (StringUtils.hasText(keyword)) {
+            wrapper.like(Customer::getCompanyName, keyword);
+        }
+
+        List<Customer> customers = customerMapper.selectList(wrapper);
+        if (customers.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        Set<Long> customerIds = customers.stream().map(Customer::getId).collect(Collectors.toSet());
+        Map<Long, CustomerHealthScoreDto> scoreMap = getHealthMapForCustomers(customerIds);
+
+        return customers.stream()
+                .map(c -> scoreMap.get(c.getId()))
+                .filter(dto -> dto != null && (!StringUtils.hasText(healthStatus) || healthStatus.equalsIgnoreCase(dto.getHealthStatus())))
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
     public Map<Long, CustomerHealthScoreDto> getHealthMapForCustomers(Set<Long> customerIds) {
         if (customerIds == null || customerIds.isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
 
-        List<Customer> customers = customerMapper.selectBatchIds(customerIds);
-        Map<Long, CustomerHealthScoreDto> result = new HashMap<>();
-        for (Customer c : customers) {
-            result.put(c.getId(), computeScore(c));
-        }
-        return result;
-    }
+        LocalDateTime now = LocalDateTime.now(clock);
+        LocalDate today = now.toLocalDate();
+        LocalDateTime thirtyDaysAgo = now.minusDays(30);
+        LocalDateTime ninetyDaysAgo = now.minusDays(90);
+        LocalDateTime oneEightyDaysAgo = now.minusDays(180);
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<CustomerHealthScoreDto> listCustomerHealthSummaries(String healthStatus, String keyword) {
-        LambdaQueryWrapper<Customer> wrapper = new LambdaQueryWrapper<>();
-        if (StringUtils.hasText(keyword)) {
-            wrapper.like(Customer::getCompanyName, keyword);
+        // 1. 全指定顧客の未解決リクエスト一括取得
+        List<ServiceRequest> openRequests = serviceRequestMapper.selectList(
+                new LambdaQueryWrapper<ServiceRequest>()
+                        .in(ServiceRequest::getCustomerId, customerIds)
+                        .in(ServiceRequest::getStatus, List.of("RECEIVED", "IN_PROGRESS", "WAITING_CUSTOMER", "REOPENED"))
+        );
+        Map<Long, List<ServiceRequest>> openReqMap = openRequests.stream()
+                .collect(Collectors.groupingBy(ServiceRequest::getCustomerId));
+
+        // 2. 直近30日のSLA違反クロック一括取得
+        List<ServiceRequest> recent30dRequests = serviceRequestMapper.selectList(
+                new LambdaQueryWrapper<ServiceRequest>()
+                        .in(ServiceRequest::getCustomerId, customerIds)
+                        .ge(ServiceRequest::getCreatedAt, thirtyDaysAgo)
+        );
+        Map<Long, List<Long>> reqIdsByCustomer = recent30dRequests.stream()
+                .collect(Collectors.groupingBy(ServiceRequest::getCustomerId,
+                        Collectors.mapping(ServiceRequest::getId, Collectors.toList())));
+
+        Set<Long> allRecentReqIds = recent30dRequests.stream().map(ServiceRequest::getId).collect(Collectors.toSet());
+        Map<Long, List<ServiceSlaClock>> breachedClocksByReqId = Collections.emptyMap();
+        if (!allRecentReqIds.isEmpty()) {
+            List<ServiceSlaClock> breachedClocks = slaClockMapper.selectList(
+                    new LambdaQueryWrapper<ServiceSlaClock>()
+                            .in(ServiceSlaClock::getServiceRequestId, allRecentReqIds)
+                            .and(w -> w.eq(ServiceSlaClock::getResponseBreached, true)
+                                    .or().eq(ServiceSlaClock::getResolveBreached, true))
+            );
+            breachedClocksByReqId = breachedClocks.stream()
+                    .collect(Collectors.groupingBy(ServiceSlaClock::getServiceRequestId));
         }
-        if (dataScopeService.isScoped()) {
-            Set<Long> allowed = dataScopeService.allowedCustomerIds();
-            if (allowed == null || allowed.isEmpty()) {
-                return List.of();
+
+        // 3. 直近180日のCSAT一括取得
+        List<CustomerCsat> csatList = csatMapper.selectList(
+                new LambdaQueryWrapper<CustomerCsat>()
+                        .in(CustomerCsat::getCustomerId, customerIds)
+                        .ge(CustomerCsat::getAnsweredAt, oneEightyDaysAgo)
+        );
+        Map<Long, List<CustomerCsat>> csatByCustomer = csatList.stream()
+                .collect(Collectors.groupingBy(CustomerCsat::getCustomerId));
+
+        // 4. 直近90日のQBR一括取得
+        List<CustomerQbr> qbrList = qbrMapper.selectList(
+                new LambdaQueryWrapper<CustomerQbr>()
+                        .in(CustomerQbr::getCustomerId, customerIds)
+                        .ge(CustomerQbr::getMeetingDate, ninetyDaysAgo.toLocalDate())
+        );
+        Map<Long, List<CustomerQbr>> qbrByCustomer = qbrList.stream()
+                .collect(Collectors.groupingBy(CustomerQbr::getCustomerId));
+
+        // 5. 請求書 (AR overdue) 一括取得
+        InvoiceMapper invoiceMapper = invoiceMapperProvider.getIfAvailable();
+        Map<Long, List<Invoice>> overdueInvoicesByCustomer = Collections.emptyMap();
+        Map<Long, List<Invoice>> allInvoicesByCustomer = Collections.emptyMap();
+        if (invoiceMapper != null) {
+            List<Invoice> invoices = invoiceMapper.selectList(
+                    new LambdaQueryWrapper<Invoice>()
+                            .in(Invoice::getCustomerId, customerIds)
+            );
+            allInvoicesByCustomer = invoices.stream().collect(Collectors.groupingBy(Invoice::getCustomerId));
+            overdueInvoicesByCustomer = invoices.stream()
+                    .filter(inv -> "OVERDUE".equalsIgnoreCase(inv.getStatus())
+                            || ("ISSUED".equalsIgnoreCase(inv.getStatus()) && inv.getDueDate() != null && inv.getDueDate().isBefore(today)))
+                    .collect(Collectors.groupingBy(Invoice::getCustomerId));
+        }
+
+        // 顧客ごとのスコア算出
+        Map<Long, CustomerHealthScoreDto> resultMap = new HashMap<>();
+        List<Customer> customerList = customerMapper.selectBatchIds(customerIds);
+        Map<Long, Customer> customerMap = customerList.stream().collect(Collectors.toMap(Customer::getId, c -> c));
+
+        for (Long custId : customerIds) {
+            Customer cust = customerMap.get(custId);
+            String companyName = cust != null ? cust.getCompanyName() : "不明顧客";
+
+            // 未解決 P0 / P1
+            List<ServiceRequest> custOpenReqs = openReqMap.getOrDefault(custId, Collections.emptyList());
+            int openP0 = (int) custOpenReqs.stream().filter(r -> "P0".equalsIgnoreCase(r.getPriority())).count();
+            int openP1 = (int) custOpenReqs.stream().filter(r -> "P1".equalsIgnoreCase(r.getPriority())).count();
+            int openCritical = openP0 + openP1;
+
+            // 直近30日SLA違反件数
+            List<Long> custReqIds = reqIdsByCustomer.getOrDefault(custId, Collections.emptyList());
+            int slaBreaches30d = 0;
+            for (Long rId : custReqIds) {
+                slaBreaches30d += breachedClocksByReqId.getOrDefault(rId, Collections.emptyList()).size();
             }
-            wrapper.in(Customer::getId, allowed);
+
+            // 直近180日CSAT平均
+            List<CustomerCsat> custCsats = csatByCustomer.getOrDefault(custId, Collections.emptyList());
+            BigDecimal avgCsat = null;
+            if (!custCsats.isEmpty()) {
+                double avg = custCsats.stream().mapToInt(CustomerCsat::getScore).average().orElse(0.0);
+                avgCsat = BigDecimal.valueOf(avg).setScale(2, RoundingMode.HALF_UP);
+            }
+
+            // 直近90日QBR
+            List<CustomerQbr> custQbrs = qbrByCustomer.getOrDefault(custId, Collections.emptyList());
+            boolean hasRecentQbr = !custQbrs.isEmpty();
+
+            // AR延滞
+            boolean arOverdue = !overdueInvoicesByCustomer.getOrDefault(custId, Collections.emptyList()).isEmpty();
+            boolean hasInvoices = !allInvoicesByCustomer.getOrDefault(custId, Collections.emptyList()).isEmpty();
+
+            // 100点減点算定 (design.md 準拠)
+            int deductions = 0;
+            List<String> missingInputs = new ArrayList<>();
+            Map<String, Object> breakdown = new HashMap<>();
+
+            // 1. 未解決重大障害 (P0: -30点/件, P1: -15点/件)
+            int p0Deduction = openP0 * 30;
+            int p1Deduction = openP1 * 15;
+            deductions += (p0Deduction + p1Deduction);
+            breakdown.put("openP0Deduction", p0Deduction);
+            breakdown.put("openP1Deduction", p1Deduction);
+
+            // 2. 直近30日SLA超過 (-10点/件)
+            int slaDeduction = slaBreaches30d * 10;
+            deductions += slaDeduction;
+            breakdown.put("slaBreachDeduction", slaDeduction);
+
+            // 3. CSAT平均 (未回答は減点なし missing_inputs に追加)
+            int csatDeduction = 0;
+            if (avgCsat != null) {
+                double scoreVal = avgCsat.doubleValue();
+                if (scoreVal < 2.0) {
+                    csatDeduction = 30;
+                } else if (scoreVal < 3.0) {
+                    csatDeduction = 20;
+                } else if (scoreVal < 4.0) {
+                    csatDeduction = 10;
+                }
+            } else {
+                missingInputs.add("CSAT");
+            }
+            deductions += csatDeduction;
+            breakdown.put("csatDeduction", csatDeduction);
+
+            // 4. 売掛金延滞 (-25点, 未請求時は missing_inputs)
+            int arDeduction = 0;
+            if (arOverdue) {
+                arDeduction = 25;
+            } else if (!hasInvoices) {
+                missingInputs.add("INVOICE");
+            }
+            deductions += arDeduction;
+            breakdown.put("arDeduction", arDeduction);
+
+            // 5. 定例会・QBR (直近90日開催なし: -10点, 未登録時 missing_inputs)
+            int qbrDeduction = 0;
+            if (!hasRecentQbr) {
+                boolean hasAnyQbr = qbrMapper.selectCount(new LambdaQueryWrapper<CustomerQbr>().eq(CustomerQbr::getCustomerId, custId)) > 0;
+                if (hasAnyQbr) {
+                    qbrDeduction = 10;
+                } else {
+                    missingInputs.add("QBR");
+                }
+            }
+            deductions += qbrDeduction;
+            breakdown.put("qbrDeduction", qbrDeduction);
+
+            int finalScore = Math.max(0, 100 - deductions);
+            String healthStatus = finalScore >= 80 ? "HEALTHY" : (finalScore >= 50 ? "WARNING" : "CRITICAL");
+
+            List<String> explanations = new ArrayList<>();
+            if (openCritical > 0) explanations.add("未解決重大障害: " + openCritical + "件 (-" + (p0Deduction + p1Deduction) + "点)");
+            if (slaBreaches30d > 0) explanations.add("直近30日SLA違反: " + slaBreaches30d + "件 (-" + slaDeduction + "点)");
+            if (csatDeduction > 0) explanations.add("CSAT評価低迷: " + avgCsat + " (-" + csatDeduction + "点)");
+            if (arDeduction > 0) explanations.add("売掛金延滞発生中 (-25点)");
+            if (qbrDeduction > 0) explanations.add("定例会(QBR)未開催 (-10点)");
+            if (explanations.isEmpty()) explanations.add("特記事項なし（健全稼動）");
+
+            resultMap.put(custId, CustomerHealthScoreDto.builder()
+                    .customerId(custId)
+                    .customerName(companyName)
+                    .healthScore(finalScore)
+                    .healthStatus(healthStatus)
+                    .openCriticalIssuesCount(openCritical)
+                    .slaBreachCount30d(slaBreaches30d)
+                    .avgCsatScore(avgCsat)
+                    .arOverdueFlag(arOverdue)
+                    .missingInputs(missingInputs)
+                    .factorsExplanation(String.join(" / ", explanations))
+                    .factorBreakdown(breakdown)
+                    .build());
         }
 
-        List<Customer> customers = customerMapper.selectList(wrapper);
-        List<CustomerHealthScoreDto> dtos = customers.stream()
-                .map(this::computeScore)
-                .collect(Collectors.toList());
-
-        if (StringUtils.hasText(healthStatus)) {
-            dtos = dtos.stream()
-                    .filter(d -> Objects.equals(d.getHealthStatus(), healthStatus))
-                    .collect(Collectors.toList());
-        }
-
-        return dtos;
+        return resultMap;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void generateMonthlySnapshot(String snapshotMonth) {
-        LocalDate snapshotDate = LocalDate.now(clock);
-        if (StringUtils.hasText(snapshotMonth)) {
-            try {
-                snapshotDate = LocalDate.parse(snapshotMonth + "-01");
-            } catch (Exception ignored) {
-            }
+    public void generateMonthlySnapshot(String targetMonth) {
+        log.info("顧客ヘルス月次スナップショット生成開始: month={}", targetMonth);
+        LocalDate snapshotDate = LocalDate.parse(targetMonth + "-01");
+
+        List<Customer> allCustomers = customerMapper.selectList(new LambdaQueryWrapper<Customer>());
+        if (allCustomers.isEmpty()) {
+            return;
         }
 
-        List<Customer> allCustomers = customerMapper.selectList(null);
-        LocalDateTime now = LocalDateTime.now(clock);
+        Set<Long> customerIds = allCustomers.stream().map(Customer::getId).collect(Collectors.toSet());
+        Map<Long, CustomerHealthScoreDto> scoreMap = getHealthMapForCustomers(customerIds);
 
-        for (Customer c : allCustomers) {
-            CustomerHealthScoreDto scoreDto = computeScore(c);
-
-            String breakdownStr = "{}";
-            try {
-                breakdownStr = objectMapper.writeValueAsString(scoreDto.getFactorBreakdown());
-            } catch (JsonProcessingException ignored) {
-            }
+        for (CustomerHealthScoreDto dto : scoreMap.values()) {
+            CustomerHealthSnapshot existing = snapshotMapper.selectOne(
+                    new LambdaQueryWrapper<CustomerHealthSnapshot>()
+                            .eq(CustomerHealthSnapshot::getCustomerId, dto.getCustomerId())
+                            .eq(CustomerHealthSnapshot::getSnapshotDate, snapshotDate)
+            );
 
             String missingJson = "[]";
             try {
-                missingJson = objectMapper.writeValueAsString(scoreDto.getMissingInputs());
-            } catch (JsonProcessingException ignored) {
+                missingJson = objectMapper.writeValueAsString(dto.getMissingInputs());
+            } catch (JsonProcessingException e) {
+                log.warn("missing_inputs JSON変換失敗", e);
             }
 
-            CustomerHealthSnapshot existing = snapshotMapper.selectOne(
-                    new LambdaQueryWrapper<CustomerHealthSnapshot>()
-                            .eq(CustomerHealthSnapshot::getCustomerId, c.getId())
-                            .eq(CustomerHealthSnapshot::getSnapshotDate, snapshotDate)
-                            .last("LIMIT 1"));
-
             if (existing != null) {
-                // 非破壊更新 (WIP-3: deleteせずに既存行を更新)
-                existing.setHealthStatus(scoreDto.getHealthStatus());
-                existing.setTotalScore(scoreDto.getHealthScore());
-                existing.setOpenCriticalIssuesCount(scoreDto.getOpenCriticalIssuesCount());
-                existing.setSlaBreachCount30d(scoreDto.getSlaBreachCount30d());
-                existing.setAvgCsatScore(scoreDto.getAvgCsatScore());
-                existing.setArOverdueFlag(Boolean.TRUE.equals(scoreDto.getArOverdueFlag()));
+                // 非破壊更新: 既存行を上書き
+                existing.setTotalScore(dto.getHealthScore());
+                existing.setHealthStatus(dto.getHealthStatus());
+                existing.setOpenCriticalIssuesCount(dto.getOpenCriticalIssuesCount());
+                existing.setSlaBreachCount30d(dto.getSlaBreachCount30d());
+                existing.setAvgCsatScore(dto.getAvgCsatScore());
+                existing.setArOverdueFlag(dto.getArOverdueFlag());
                 existing.setMissingInputsJson(missingJson);
-                existing.setFactorsExplanation(breakdownStr);
+                existing.setFactorsExplanation(dto.getFactorsExplanation());
                 snapshotMapper.updateById(existing);
             } else {
                 CustomerHealthSnapshot snapshot = CustomerHealthSnapshot.builder()
-                        .customerId(c.getId())
+                        .customerId(dto.getCustomerId())
                         .snapshotDate(snapshotDate)
-                        .healthStatus(scoreDto.getHealthStatus())
-                        .totalScore(scoreDto.getHealthScore())
-                        .openCriticalIssuesCount(scoreDto.getOpenCriticalIssuesCount())
-                        .slaBreachCount30d(scoreDto.getSlaBreachCount30d())
-                        .avgCsatScore(scoreDto.getAvgCsatScore())
-                        .arOverdueFlag(Boolean.TRUE.equals(scoreDto.getArOverdueFlag()))
-                        .factorsExplanation(breakdownStr)
+                        .totalScore(dto.getHealthScore())
+                        .healthStatus(dto.getHealthStatus())
+                        .openCriticalIssuesCount(dto.getOpenCriticalIssuesCount())
+                        .slaBreachCount30d(dto.getSlaBreachCount30d())
+                        .avgCsatScore(dto.getAvgCsatScore())
+                        .arOverdueFlag(dto.getArOverdueFlag())
                         .missingInputsJson(missingJson)
-                        .createdAt(now)
+                        .factorsExplanation(dto.getFactorsExplanation())
+                        .createdAt(LocalDateTime.now(clock))
                         .build();
                 snapshotMapper.insert(snapshot);
             }
         }
-    }
-
-    /**
-     * 100点減点モデルによるヘルススコア算定 (WIP-3)
-     */
-    private CustomerHealthScoreDto computeScore(Customer customer) {
-        LocalDateTime now = LocalDateTime.now(clock);
-        LocalDate today = now.toLocalDate();
-        LocalDateTime ninetyDaysAgo = now.minusDays(90);
-        LocalDateTime oneEightyDaysAgo = now.minusDays(180);
-
-        List<String> missingInputs = new ArrayList<>();
-        List<String> deductionExplanations = new ArrayList<>();
-        int totalDeduction = 0;
-
-        // 1. 未解決 P0 / P1 リクエスト件数 (P0: -20点/件, P1: -10点/件)
-        List<ServiceRequest> openCriticalRequests = serviceRequestMapper.selectList(
-                new LambdaQueryWrapper<ServiceRequest>()
-                        .eq(ServiceRequest::getCustomerId, customer.getId())
-                        .in(ServiceRequest::getPriority, List.of("P0", "P1"))
-                        .notIn(ServiceRequest::getStatus, List.of("RESOLVED", "CLOSED")));
-
-        int openP0Count = 0;
-        int openP1Count = 0;
-        for (ServiceRequest r : openCriticalRequests) {
-            if ("P0".equals(r.getPriority())) {
-                openP0Count++;
-            } else if ("P1".equals(r.getPriority())) {
-                openP1Count++;
-            }
-        }
-        int openCriticalCount = openP0Count + openP1Count;
-        int criticalDeduction = (openP0Count * 20) + (openP1Count * 10);
-        if (criticalDeduction > 0) {
-            totalDeduction += criticalDeduction;
-            deductionExplanations.add(String.format("未解決重大障害減点: -%d点 (P0:%d件, P1:%d件)", criticalDeduction, openP0Count, openP1Count));
-        }
-
-        // 2. 直近90日 SLA 違反件数 (-10点/件)
-        List<ServiceRequest> recentRequests = serviceRequestMapper.selectList(
-                new LambdaQueryWrapper<ServiceRequest>()
-                        .eq(ServiceRequest::getCustomerId, customer.getId())
-                        .ge(ServiceRequest::getCreatedAt, ninetyDaysAgo));
-
-        int breachedCount = 0;
-        if (!recentRequests.isEmpty()) {
-            List<Long> reqIds = recentRequests.stream().map(ServiceRequest::getId).collect(Collectors.toList());
-            List<ServiceSlaClock> clocks = slaClockMapper.selectList(
-                    new LambdaQueryWrapper<ServiceSlaClock>()
-                            .in(ServiceSlaClock::getServiceRequestId, reqIds));
-
-            Set<Long> breachedIds = clocks.stream()
-                    .filter(c -> Boolean.TRUE.equals(c.getResponseBreached()) || Boolean.TRUE.equals(c.getResolveBreached()))
-                    .map(ServiceSlaClock::getServiceRequestId)
-                    .collect(Collectors.toSet());
-            breachedCount = breachedIds.size();
-        }
-        int slaDeduction = breachedCount * 10;
-        if (slaDeduction > 0) {
-            totalDeduction += slaDeduction;
-            deductionExplanations.add(String.format("直近90日SLA違反減点: -%d点 (違反:%d件)", slaDeduction, breachedCount));
-        }
-
-        // 3. 直近180日 CSAT 平均 (4.0以上: 0点, 3.0-3.9: -10点, 2.0-2.9: -20点, <2.0: -30点)
-        List<CustomerCsat> recentCsats = csatMapper.selectList(
-                new LambdaQueryWrapper<CustomerCsat>()
-                        .eq(CustomerCsat::getCustomerId, customer.getId())
-                        .ge(CustomerCsat::getAnsweredAt, oneEightyDaysAgo));
-
-        BigDecimal avgCsat = null;
-        int csatDeduction = 0;
-        if (!recentCsats.isEmpty()) {
-            double avg = recentCsats.stream().mapToInt(CustomerCsat::getScore).average().orElse(0.0);
-            avgCsat = BigDecimal.valueOf(avg).setScale(2, RoundingMode.HALF_UP);
-            if (avg < 2.0) {
-                csatDeduction = 30;
-            } else if (avg < 3.0) {
-                csatDeduction = 20;
-            } else if (avg < 4.0) {
-                csatDeduction = 10;
-            }
-            if (csatDeduction > 0) {
-                totalDeduction += csatDeduction;
-                deductionExplanations.add(String.format("CSAT評価低迷減点: -%d点 (平均CSAT: %.2f)", csatDeduction, avg));
-            }
-        } else {
-            missingInputs.add("CSAT");
-        }
-
-        // 4. 売掛金延滞 (AR Overdue: -20点)
-        boolean hasOverdue = false;
-        InvoiceMapper invoiceMapper = invoiceMapperProvider.getIfAvailable();
-        if (invoiceMapper != null) {
-            List<Invoice> invoices = invoiceMapper.selectList(
-                    new LambdaQueryWrapper<Invoice>()
-                            .eq(Invoice::getCustomerId, customer.getId()));
-            if (invoices.isEmpty()) {
-                missingInputs.add("INVOICE");
-            } else {
-                hasOverdue = invoices.stream().anyMatch(inv ->
-                        inv.getDueDate() != null &&
-                        inv.getDueDate().isBefore(today) &&
-                        !"PAID".equalsIgnoreCase(inv.getStatus()) &&
-                        !"CANCELLED".equalsIgnoreCase(inv.getStatus()));
-                if (hasOverdue) {
-                    totalDeduction += 20;
-                    deductionExplanations.add("売掛金(請求)延滞減点: -20点");
-                }
-            }
-        } else {
-            missingInputs.add("INVOICE");
-        }
-
-        // 総合スコア (100 - 減点、下限0点)
-        int finalScore = Math.max(0, 100 - totalDeduction);
-
-        // ステータス判定: HEALTHY (>=80), WARNING (50-79), CRITICAL (<50)
-        String healthStatus;
-        if (finalScore >= 80) {
-            healthStatus = "HEALTHY";
-        } else if (finalScore >= 50) {
-            healthStatus = "WARNING";
-        } else {
-            healthStatus = "CRITICAL";
-        }
-
-        Map<String, Object> breakdown = new HashMap<>();
-        breakdown.put("openP0Count", openP0Count);
-        breakdown.put("openP1Count", openP1Count);
-        breakdown.put("openCriticalCount", openCriticalCount);
-        breakdown.put("breachedRequests90d", breachedCount);
-        breakdown.put("averageCsat", avgCsat != null ? avgCsat.doubleValue() : "N/A");
-        breakdown.put("arOverdue", hasOverdue);
-        breakdown.put("totalDeduction", totalDeduction);
-        breakdown.put("deductions", deductionExplanations);
-
-        return CustomerHealthScoreDto.builder()
-                .customerId(customer.getId())
-                .customerName(customer.getCompanyName())
-                .healthScore(finalScore)
-                .healthStatus(healthStatus)
-                .openCriticalIssuesCount(openCriticalCount)
-                .slaBreachCount30d(breachedCount)
-                .avgCsatScore(avgCsat)
-                .arOverdueFlag(hasOverdue)
-                .missingInputs(missingInputs)
-                .factorsExplanation(String.join("; ", deductionExplanations))
-                .factorBreakdown(breakdown)
-                .calculatedAt(now)
-                .build();
+        log.info("顧客ヘルス月次スナップショット生成完了: 件数={}", scoreMap.size());
     }
 }
